showing one box

--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,15 @@
   justify-items: center;
 }
 
-.card {
-  padding: 2em;
+.Card {
+  padding: 2em; 
+
 }
+
+p{
+  font-size: medium;
+}
+
 
 .read-the-docs {
   color: #888;
